<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dongker"
        app:contentInsetStart="0dp">

        <TextView
            android:id="@+id/article_heading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="Buat Data"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />




    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tb">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nama_kejadianTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/nama_kejadian" />

            <EditText

                android:id="@+id/ETnama_kejadian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text" />

            <Button
                android:id="@+id/create_kejadian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/roundedbutton"
                android:elevation="5dp"
                android:onClick="onCreateKejadian"
                android:text="@string/submit"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/nama_penyakitTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="5dp"
                android:text="@string/nama_penyakit" />

            <EditText

                android:id="@+id/ETnama_penyakit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/deskripsiTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="5dp"
                android:text="@string/deskripsi" />

            <EditText

                android:id="@+id/ETdeskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/gejalaTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/gejala" />

            <Spinner
                android:id="@+id/SPgejala1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp" />

            <Spinner
                android:id="@+id/SPgejala2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp" />

            <Spinner
                android:id="@+id/SPgejala3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp" />

            <Spinner
                android:id="@+id/SPgejala4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp" />

            <Spinner
                android:id="@+id/SPgejala5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp" />

            <Spinner
                android:id="@+id/SPgejala6"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp" />

            <Spinner
                android:id="@+id/SPgejala7"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:id="@+id/penyebabTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/peyebab" />

            <EditText

                android:id="@+id/ETpenyebab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/pertolonganTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="Pertolongan :" />

            <EditText

                android:id="@+id/ETpertolongan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/catatanTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/catatan" />

            <EditText

                android:id="@+id/ETcatatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/linkYoutubeTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="Link Youtube" />

            <EditText

                android:id="@+id/ETlinkYoutube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="hY0ZL_zbA3E"
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/kejadianTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/kejadian" />

            <Spinner
                android:id="@+id/SPkejadian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp" />

            <Button
                android:id="@+id/create_Penyakit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/roundedbutton"
                android:elevation="5dp"
                android:onClick="onCreatePenyakit"
                android:text="@string/submit"

                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/nama_gejalaTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/gejala" />

            <EditText

                android:id="@+id/ETgejala"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text" />

            <Spinner
                android:id="@+id/SPkejadian2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp" />

            <Button
                android:id="@+id/create_gejala"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/roundedbutton"
                android:elevation="5dp"
                android:layout_marginBottom="16dp"
                android:onClick="onCreateGejala"
                android:text="@string/submit"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>